fix chevron alignment issues

--- a/packages/calcite-components/src/components/stepper-item/stepper-item.scss
+++ b/packages/calcite-components/src/components/stepper-item/stepper-item.scss
@@ -2,6 +2,7 @@
   --calcite-stepper-item-spacing-unit-s: theme("spacing.1");
   --calcite-stepper-item-spacing-unit-m: theme("spacing.3");
   --calcite-stepper-item-spacing-unit-l: theme("spacing.4");
+  --calcite-internal-stepper-action-inline-size: theme("spacing.8");
   @apply text-n1h;
   margin-inline-end: theme("margin.1");
   .stepper-item-description {
@@ -13,6 +14,7 @@
   --calcite-stepper-item-spacing-unit-s: theme("spacing.2");
   --calcite-stepper-item-spacing-unit-m: theme("spacing.4");
   --calcite-stepper-item-spacing-unit-l: theme("spacing.5");
+  --calcite-internal-stepper-action-inline-size: theme("spacing.10");
   @apply text-0h;
   margin-inline-end: theme("margin.2");
   .stepper-item-description {
@@ -24,6 +26,7 @@
   --calcite-stepper-item-spacing-unit-s: theme("spacing.3");
   --calcite-stepper-item-spacing-unit-m: theme("spacing.5");
   --calcite-stepper-item-spacing-unit-l: theme("spacing.6");
+  --calcite-internal-stepper-action-inline-size: theme("spacing.12");
   @apply text-1h;
   margin-inline-end: theme("margin.3");
   .stepper-item-description {
@@ -311,7 +314,6 @@
   me-0
   grow
   shrink;
-  order: -1;
 }
 
 @media (forced-colors: active) {
@@ -342,6 +344,10 @@
 
 .visually-hidden {
   @apply sr-only;
+}
+
+:host .stepper-item-header {
+  padding-inline: calc(var(--calcite-internal-stepper-action-inline-size) + 0.5rem);
 }
 
 @include base-component();
